WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116031
Legend tags are not accepting the full range of display styling possibilities
https://bugs.webkit.org/show_bug.cgi?id=116031
Summary
Legend tags are not accepting the full range of display styling possibilities
beat.richartz
Reported
2013-05-13 07:03:06 PDT
Legend tags are not accepting the full range of display styling possibilities, such as «inline» or «inline-block». Possible styles are «none» or «block». If a legend is styled via CSS in any other way, the computed style will always be «block».
Attachments
Add attachment
proposed patch, testcase, etc.
beat.richartz
Comment 1
2013-05-13 07:07:36 PDT
float: left makes the engine accept the property.
beat.richartz
Comment 2
2013-05-13 07:45:11 PDT
(In reply to
comment #1
)
> float: left makes the engine accept the property.
Or at least Computed Styles show the right display styling then.
Ahmad Saleem
Comment 3
2022-11-15 04:47:29 PST
Updating:
https://github.com/WebKit/WebKit/blob/ce051f767fb9df5e38db1141446915a2b60cdaf3/Source/WebCore/style/StyleAdjuster.cpp#L304
to: style.setEffectiveDisplay(equivalentBlockDisplay(style)); Would fix some WPT test cases as well.
EWS
Comment 4
2022-11-18 10:32:47 PST
Committed
256841@main
(3ae9f4142aed): <
https://commits.webkit.org/256841@main
> Reviewed commits have been landed. Closing PR #6516 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2022-11-18 10:33:21 PST
<
rdar://problem/102521516
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug