Legend tags are not accepting the full range of display styling possibilities

Legend tags are not accepting the full range of display styling possibilities
https://bugs.webkit.org/show_bug.cgi?id=116031

Reviewed by Tim Nguyen.

This patch is to align with Blink / Chrome and Gecko / Firefox.

It changes 'legend' element to accept values beyond "display: block" and accept other equivalent of 'block' type values as well.

Additionally, it is to also align "User Agent" stylesheet of "legend" tag
by removing "display: block", which is not in the Web Specification.

This change progresses Webkit on multiple WPT test cases.

* Source/WebCore/style/StyleAdjuster.cpp:
(Adjuster::adjust): Change from "DisplayType::Block" to "equivalentBlockDisplay" for "legend" element
* Source/WebCore/css/html.css: Update "legend" tag to align with web-spec
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-display-expected.txt: Rebaselined
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-grid-flex-multicol-expected.txt: Ditto
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-sans-fieldset-display-expected.txt: Ditto
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-sans-fieldset-display-expected.txt: Ditto
* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-grid-flex-multicol-expected.txt: Ditto
* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-sans-fieldset-display-expected.txt: Added Platform Specific Expectations
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/legend-sans-fieldset-display-expected.txt: Added Platform Specific Expectations

Canonical link: https://commits.webkit.org/256841@main